--- a/pom.xml
+++ b/pom.xml
@@ -69,12 +69,7 @@
             <scope>test</scope>
         </dependency>
 
-<!--        redisson-->
-        <dependency>
-            <groupId>org.redisson</groupId>
-            <artifactId>redisson-spring-boot-starter</artifactId>
-            <version>3.23.5</version>
-        </dependency>
+
 
 
         <!--        JDA-->
@@ -122,6 +117,14 @@
             <groupId>dev.langchain4j</groupId>
             <artifactId>langchain4j-spring-boot-starter</artifactId>
             <version>0.36.0</version>
+        </dependency>
+
+
+        <!--    google ai-->
+        <dependency>
+            <groupId>dev.langchain4j</groupId>
+            <artifactId>langchain4j-google-ai-gemini</artifactId>
+            <version>0.36.2</version>
         </dependency>
 
 
