feat(cloudflare): 集成 Cloudflare R2 对象存储
- 添加 Cloudflare R2配置类和使用说明
- 新增文件上传、管理等功能- 提供 API 端点操作文件
- 优化性能和安全性建议
- 添加故障排除指南

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,43 +1,3 @@
 spring:
-  application:
-    name: discordbot2
-  datasource:
-    driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://47.89.249.86:3306/discordBot?sessionVariables=sql_mode='NO_ENGINE_SUBSTITUTION'&jdbcCompliantTruncation=false
-#    url: jdbc:mysql://localhost/discordBot?sessionVariables=sql_mode='NO_ENGINE_SUBSTITUTION'&jdbcCompliantTruncation=false
-    username: root
-    password: 123
-  servlet:
-    multipart:
-      max-file-size: 10MB
-      max-request-size: 100MB
-#  data:
-#    redis:
-#      # 数据库
-#      database: 0
-#      # 主机
-#      host: 45.76.199.153
-#      # 端口
-#      port: 6379
-#      # 密码
-#      password: 123
-#      # 读超时
-#      timeout: 5s
-#      # 连接超时
-#      connect-timeout: 5s
-mybatis:
-  configuration:
-    map-underscore-to-camel-case: true
-openai:
-  api:
-    url: https://api.openai.com/v1/chat/completions
-
-
-
-
-
-
-
-
-
-
+  profiles:
+    active: dev
