--- a/pom.xml
+++ b/pom.xml
@@ -28,12 +28,15 @@
     </scm>
     <properties>
         <java.version>17</java.version>
+        <langchain4j.version>1.0.0-beta3</langchain4j.version>
     </properties>
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
+
+        <!--        test-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
@@ -61,7 +64,7 @@
             <optional>true</optional>
         </dependency>
 
-<!--        mybatis-->
+        <!--        mybatis-->
         <dependency>
             <groupId>org.mybatis.spring.boot</groupId>
             <artifactId>mybatis-spring-boot-starter-test</artifactId>
@@ -69,8 +72,26 @@
             <scope>test</scope>
         </dependency>
 
+        <!--        spring ai mcp-->
+        <dependency>
+            <groupId>org.springframework.ai</groupId>
+            <artifactId>spring-ai-mcp-client-spring-boot-starter</artifactId>
+            <version>1.0.0-M6</version>
+        </dependency>
 
+        <!--     langchain4j   mcp-->
+        <dependency>
+            <groupId>dev.langchain4j</groupId>
+            <artifactId>langchain4j-mcp</artifactId>
+            <version>${langchain4j.version}</version>
+        </dependency>
 
+        <!-- https://mvnrepository.com/artifact/com.github.pagehelper/pagehelper-spring-boot-starter -->
+        <dependency>
+            <groupId>com.github.pagehelper</groupId>
+            <artifactId>pagehelper-spring-boot-starter</artifactId>
+            <version>1.4.6</version>
+        </dependency>
 
         <!--        JDA-->
         <dependency>
@@ -79,46 +100,37 @@
             <version>5.0.1</version>
         </dependency>
 
-<!--        密钥管理-->
+        <!--        密钥管理-->
         <dependency>
             <groupId>io.github.cdimascio</groupId>
             <artifactId>dotenv-java</artifactId>
             <version>3.0.0</version>
         </dependency>
-        <!--	渲染html-->
-        <!-- https://mvnrepository.com/artifact/gui.ava/html2image -->
+
+        <!--        main langchain4j-->
         <dependency>
-            <groupId>com.github.xuwei-k</groupId>
-            <artifactId>html2image</artifactId>
-            <version>0.1.0</version>
+            <groupId>dev.langchain4j</groupId>
+            <artifactId>langchain4j</artifactId>
+            <version>${langchain4j.version}</version>
         </dependency>
-
-
-
         <!--    langchain4j OpenAi-->
         <dependency>
             <groupId>dev.langchain4j</groupId>
             <artifactId>langchain4j-open-ai-spring-boot-starter</artifactId>
-            <version>0.36.0</version>
+            <version>${langchain4j.version}</version>
         </dependency>
 
-        <dependency>
-            <groupId>dev.langchain4j</groupId>
-            <artifactId>langchain4j-chatglm</artifactId>
-            <version>0.36.0</version>
-        </dependency>
-
-        <dependency>
-            <groupId>dev.langchain4j</groupId>
-            <artifactId>langchain4j-open-ai</artifactId>
-            <version>0.36.0</version>
-        </dependency>
+        <!--        <dependency>-->
+        <!--            <groupId>dev.langchain4j</groupId>-->
+        <!--            <artifactId>langchain4j-open-ai</artifactId>-->
+        <!--            <version>0.36.0</version>-->
+        <!--        </dependency>-->
 
         <!--    Ai Service-->
         <dependency>
             <groupId>dev.langchain4j</groupId>
             <artifactId>langchain4j-spring-boot-starter</artifactId>
-            <version>0.36.0</version>
+            <version>${langchain4j.version}</version>
         </dependency>
 
 
@@ -126,34 +138,27 @@
         <dependency>
             <groupId>dev.langchain4j</groupId>
             <artifactId>langchain4j-google-ai-gemini</artifactId>
-            <version>0.36.2</version>
+            <version>${langchain4j.version}</version>
         </dependency>
 
         <!-- https://mvnrepository.com/artifact/dev.langchain4j/langchain4j-dashscope-spring-boot-starter -->
+
         <dependency>
             <groupId>dev.langchain4j</groupId>
-            <artifactId>langchain4j-dashscope-spring-boot-starter</artifactId>
-            <version>0.36.0</version>
+            <artifactId>langchain4j-community-dashscope</artifactId>
+            <version>${langchain4j.version}</version>
         </dependency>
-
-
-<!--&lt;!&ndash;        qwen&ndash;&gt;-->
-<!--        &lt;!&ndash; https://mvnrepository.com/artifact/dev.langchain4j/langchain4j-community-dashscope-spring-boot-starter &ndash;&gt;-->
-<!--        <dependency>-->
-<!--            <groupId>dev.langchain4j</groupId>-->
-<!--            <artifactId>langchain4j-community-dashscope-spring-boot-starter</artifactId>-->
-<!--            <version>1.0.0-beta1</version>-->
-<!--        </dependency>-->
-
 
         <!--        langchain4j-redis-->
 
         <!-- https://mvnrepository.com/artifact/dev.langchain4j/langchain4j-redis -->
+
         <dependency>
             <groupId>dev.langchain4j</groupId>
-            <artifactId>langchain4j-redis</artifactId>
-            <version>0.36.2</version>
+            <artifactId>langchain4j-community-redis</artifactId>
+            <version>${langchain4j.version}</version>
         </dependency>
+
 
         <!-- https://mvnrepository.com/artifact/com.squareup.okhttp3/okhttp -->
         <dependency>
@@ -166,6 +171,13 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+
+        <!--java-jwt坐标-->
+        <dependency>
+            <groupId>com.auth0</groupId>
+            <artifactId>java-jwt</artifactId>
+            <version>4.4.0</version>
         </dependency>
 
         <!-- Hutool -->
@@ -182,45 +194,64 @@
             <version>2.0.36</version>
         </dependency>
 
-<!--        env-->
+        <!--        env-->
         <dependency>
             <groupId>io.github.cdimascio</groupId>
             <artifactId>dotenv-java</artifactId>
             <version>3.0.0</version>
         </dependency>
-<!--X API-->
+
         <dependency>
-            <groupId>com.twitter</groupId>
-            <artifactId>twitter-api-java-sdk</artifactId>
-            <version>1.1.4</version>
+            <groupId>com.google.genai</groupId>
+            <artifactId>google-genai</artifactId>
+            <version>0.2.0</version> <!-- {x-version-update:google-genai:released} -->
+        </dependency>
+
+        <!--        validation-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
+        </dependency>
+
+        <!-- AWS S3 SDK for Cloudflare R2 -->
+        <dependency>
+            <groupId>software.amazon.awssdk</groupId>
+            <artifactId>s3</artifactId>
+            <version>2.26.0</version>
+        </dependency>
+
+        <!--redis坐标-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
         </dependency>
 
     </dependencies>
     <packaging>jar</packaging>
     <build>
         <!-- 打包插件 -->
-            <plugins>
-                <plugin>
-                    <groupId>org.springframework.boot</groupId>
-                    <artifactId>spring-boot-maven-plugin</artifactId>
-                    <configuration>
-                        <executable>true</executable>
-                        <layout>JAR</layout>
-                    </configuration>
-                    <executions>
-                        <execution>
-                            <goals>
-                                <goal>repackage</goal>
-                            </goals>
-                            <configuration>
-                                <attach>false</attach>
-                            </configuration>
-                        </execution>
-                    </executions>
-                </plugin>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <executable>true</executable>
+                    <layout>JAR</layout>
+                </configuration>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>repackage</goal>
+                        </goals>
+                        <configuration>
+                            <attach>false</attach>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
 
-            </plugins>
-        </build>
+        </plugins>
+    </build>
 
 
-    </project>
+</project>
