feat(article): 增加文章更新和删除功能
- 在 ArticleController 中添加更新和删除接口
- 在 ArticleMapper 中添加相应的更新和删除方法
- 更新 ArticleService 和 ArticleServiceImpl 实现相应的业务逻辑
- 修改 Result 类以支持自定义成功消息

--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -5,7 +5,7 @@ spring:
     name: discordbot2
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost/discordBot?sessionVariables=sql_mode='NO_ENGINE_SUBSTITUTION'&jdbcCompliantTruncation=false
+    url: jdbc:mysql://192.168.31.41:3306/discordBot?sessionVariables=sql_mode='NO_ENGINE_SUBSTITUTION'&jdbcCompliantTruncation=false
     #    url: jdbc:mysql://localhost/discordBot?sessionVariables=sql_mode='NO_ENGINE_SUBSTITUTION'&jdbcCompliantTruncation=false
     username: root
     password: 123
@@ -17,8 +17,7 @@ spring:
     redis:
       # 数据库
       database: 0
-      # 主机
-      host: 47.82.1.231
+      host: 192.168.31.41
       # 端口
       port: 6379
 #      # 密码
