--- a/src/main/resources/application-pro.yaml
+++ b/src/main/resources/application-pro.yaml
@@ -1,12 +1,11 @@
 server:
-  port: 8080
+  port: 8081
 spring:
   application:
     name: discordbot2
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://47.82.1.231:3306/discordBot?sessionVariables=sql_mode='NO_ENGINE_SUBSTITUTION'&jdbcCompliantTruncation=false
-    #    url: jdbc:mysql://localhost/discordBot?sessionVariables=sql_mode='NO_ENGINE_SUBSTITUTION'&jdbcCompliantTruncation=false
+    url: jdbc:mysql://47.79.145.141:3306/discordBot?sessionVariables=sql_mode='NO_ENGINE_SUBSTITUTION'&jdbcCompliantTruncation=false
     username: root
     password: 123
   servlet:
@@ -18,11 +17,11 @@ spring:
       # 数据库
       database: 0
       # 主机
-      host: 47.82.1.231
+      host: 47.79.145.141
       # 端口
       port: 6379
 #      # 密码
-#      password: 123
+      password: 123
       # 读超时
       timeout: 5s
       # 连接超时
