feat(websocket): 更新 WebSocketServer 实现，增强聊天记录功能
- 在用户连接时加载并发送最近的聊天记录
- 保存用户和 AI 消息到数据库
- 改进消息发送和广播方法以处理异常
- 更新 RegularConfig 以包含 ChatMessageService

--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -21,7 +21,7 @@ spring:
       # 端口
       port: 6379
 #      # 密码
-#      password: 123
+      password: 123
       # 读超时
       timeout: 5s
       # 连接超时
